[package]
name = "panacea-nft-redeem"
version = "0.1.0"
edition = "2018"
description = "panacea-nft-redeem"
repository = "https://github.com/gyuguen/panacea-smart-contract/panacea-nft-redeem"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
apt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw721 = "0.6.2"
cw721-base = { version = "0.6.2", feature = ["library"] }
cw-storage-plus = "0.6.2"

cosmwasm-std = "0.14.0"
cosmwasm-storage = "0.14.0"
schemars = "0.8.3"
thiserror = "1.0.23"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-vm = { version = "0.14.0", default-features = false }
cosmwasm-schema = "0.14.0"