[package]
name = "payment-guarantee"
version = "0.1.0"
edition = "2018"
description = "payment guarantee"
repository = "https://github.com/gyuguen/panacea-smart-contract/payment-guarantee"

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw721 = "0.6.2"
cw721-base = "0.6.2"
cw-storage-plus = "0.6.2"
cosmwasm-std = "0.14.0"
cosmwasm-storage = "0.14.0"
schemars = "0.8.3"
thiserror = "1.0.23"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
log = "0.4"

[dev-dependencies]
cosmwasm-vm = { version = "0.14.0", default-features = false }
cosmwasm-schema = "0.14.0"