[package]
name = "reward-join"
version = "0.1.0"
authors = ["gyuguen.jang@medibloc.org"]
edition = "2018"
description = "reward to join"
repository = "https://github.com/gyuguen/panacea-smart-contract/reward-to-join"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
apt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "0.14.1"
cosmwasm-storage = "0.14.1"
schemars = "0.8.3"
thiserror = "1.0.23"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
log = "0.4"

[dev-dependencies]
cosmwasm-vm = { version = "0.14.1", default-features = false }
cosmwasm-schema = "0.14.1"